--- a/templates/index.html
+++ b/templates/index.html
@@ -8,45 +8,8 @@
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 
-<style>
-    * {
-        margin: 0;
-        padding: 0;
-        box-sizing: border-box;
-    }
-
-    button {
-        width: 100%;
-        padding: 10px;
-        margin: 10px 0;
-    }
-
-    input {
-        width: 100%;
-        padding: 10px;
-        margin: 10px 0;
-    }
-
-    .container {
-        display: flex;
-        flex-direction: column;
-    }
-
-    .form {
-        padding: 10px;
-    }
-
-    th {
-        text-align: left
-    }
-
-    .task-list {
-        padding: 10px;
-    }
-</style>
-
 <body>
-    <div class='container' style="display: flex ; width: 50%">
+    <div class='container'>
         <div class='form'>
             <form action="/tasks" method="post">
                 <p>
