adding task model and styling task form

--- a/templates/index.html
+++ b/templates/index.html
@@ -9,14 +9,14 @@
 </head>
 
 <body>
-    <div class='container'>
+    <div class='container m-2'>
         <div class='form'>
             <form action="/tasks" method="post">
                 <p>
-                    <input type="text" id="task_name" name="task_name" required>
+                    <input class="p-2 border-2" type="text" id="task_name" name="task_name" required>
                 </p>
                 <p>
-                    <button type="submit">Add Task</button>
+                    <button class="bg-blue-400" type="submit">Add Task</button>
                 </p>
             </form>
         </div>
