--- a/templates/index.html
+++ b/templates/index.html
@@ -8,15 +8,15 @@
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 
-<body>
-    <div class='container m-2'>
-        <div class='form'>
+<body class="">
+    <div class='container bg-green-200 m-2 flex flex-col justify-center items-center'>
+        <div class='form bg-red-100'>
             <form action="/tasks" method="post">
                 <p>
                     <input class="p-2 border-2" type="text" id="task_name" name="task_name" required>
                 </p>
                 <p>
-                    <button class="bg-blue-400" type="submit">Add Task</button>
+                    <button class="w-full my-2 px-4 py-2 bg-blue-400" type="submit">Add Task</button>
                 </p>
             </form>
         </div>
