--- a/templates/index.html
+++ b/templates/index.html
@@ -31,7 +31,7 @@
                     <th>status</th>
                 </tr>
                 {% for task in data.tasks %}
-                <p>{{ task | tojson }}</p>
+                <!-- <p>{{ task | tojson }}</p> -->
                 <tr>
                     <td>{{ task.name }}</td>
                     <td>{{ task.completed }}</td>
