--- a/templates/index.html
+++ b/templates/index.html
@@ -38,8 +38,12 @@
                     <td>{{ task.name }}</td>
                     <td>{{ task.completed }}</td>
                     <td>{{ task.pomodoros }}</td>
-                    <td class="px-4 border-2 text-white bg-sky-400 hover:bg-sky-500"><a
-                            href="/tasks/{{ task.id }}">edit</a></td>
+                    <td class="px-4 border-2 text-white bg-sky-400 hover:bg-sky-500">
+                        <a href="/tasks/{{ task.id }}">edit task</a>
+                    </td>
+                    <td class="px-4 border-2 text-white bg-sky-400 hover:bg-sky-500">
+                        <a href="/notes/{{ task.id }}">edit task</a>
+                    </td>
                 </tr>
                 {% endfor %}
             </table>
