Adding notest to the db

--- a/templates/index.html
+++ b/templates/index.html
@@ -42,7 +42,7 @@
                         <a href="/tasks/{{ task.id }}">edit task</a>
                     </td>
                     <td class="px-4 border-2 text-white bg-sky-400 hover:bg-sky-500">
-                        <a href="/notes/{{ task.id }}">edit task</a>
+                        <a href="/notes/{{ task.id }}">edit notes</a>
                     </td>
                 </tr>
                 {% endfor %}
