--- a/templates/edit_notes.html
+++ b/templates/edit_notes.html
@@ -24,7 +24,7 @@
                     <input type="hidden" id="action" name="action" value="add_notes">
                 </p>
                 <p>
-                    <button class="w-full my-2 px-4 py-2 bg-blue-400" type="submit">Save Task</button>
+                    <button class="w-full my-2 px-4 py-2 bg-blue-400" type="submit">Save Note</button>
                 </p>
             </form>
         </div>
