--- a/templates/edit_notes.html
+++ b/templates/edit_notes.html
@@ -15,13 +15,13 @@
     <div class='container m-2 flex flex-col row justify-center items-center'>
         <p class="p-2 m-4"><a class="underline" href="/">Home</a></p>
         <p class="p-2 m-4"> Task - {{ task.name }} {{ task.completed }} {{ task.pomodoros }}</p>
-        <div class='form bg-red-100'>
+        <div class='form'>
             <form action="/api" method="post">
                 <p class="flex flex-col">
                     <input class="p-2 border-2" type="datetime-local" id="notes_date" name="notes_date" value=""
                         required>
                     <input class=" p-2 border-2" type="text" id="notes_text" name="notes_text" value="" required>
-                    <input class="p-2 border-2" type="text" id="notes_task_id" name="notes_task_id"
+                    <input class="p-2 border-2" type="hidden" id="notes_task_id" name="notes_task_id"
                         value="{{ task.id }}" required>
                     <input type="hidden" id="action" name="action" value="add_notes">
                 </p>
