--- a/templates/index.html
+++ b/templates/index.html
@@ -13,12 +13,13 @@
         <div class='form w-1/3'>
             <form action="/api" method="post">
                 <p>
-                    <input class="p-2 w-full border-2" type="text" id="task_name" name="task_name" required>
+                    <input class="p-2 w-full border-2" type="text" id="task_name" name="task_name" data-testid="task"
+                        required>
                     <input type="hidden" id="action" name="action" value="add_task">
                 </p>
                 <p>
-                    <button class="w-full font-bold text-white my-2 px-4 py-2 bg-sky-400 hover:bg-sky-500"
-                        type="submit">Add
+                    <button class="w-full font-bold text-white my-2 px-4 py-2 bg-sky-400 hover:bg-sky-500" type="submit"
+                        data-testid="enter_task">Add
                         Task</button>
                 </p>
             </form>
