formatting the edit task page

--- a/templates/index.html
+++ b/templates/index.html
@@ -31,6 +31,7 @@
                 <tr>
                     <th class="text-left">Task Name</th>
                     <th class="text-left">Status</th>
+                    <th class="text-left">Pebbles</th>
                 </tr>
                 {% for task in data.tasks %}
                 <!-- <p>{{ task | tojson }}</p> -->
