--- a/templates/edit_task.html
+++ b/templates/edit_task.html
@@ -8,25 +8,31 @@
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 
-{{ data | tojson }}
-{% set task = data.task %}
 
-<body class="">
-    <div class='container bg-green-200 m-2 flex flex-col row justify-center items-center'>
-        <div class='form bg-red-100'>
+<body class="bg-neutral-900 text-gray-600">
+    <div>
+        <p class="p-5 text-gray-200">
+            {{ data | tojson }}
+            {% set task = data.task %}
+        </p>
+    </div>
+    <div class='container m-2 flex flex-col row justify-center items-center'>
+        <div class='form'>
             <form action="/api" method="post">
                 <p class="flex flex-col">
-                    <input class="p-2 border-2" type="text" id="task_name" name="task_name" value="{{ task.name }}"
+                    <input class="p-2 my-2 border-2" type="text" id="task_name" name="task_name" value="{{ task.name }}"
                         required>
-                    <input class=" p-2 border-2" type="text" id="task_completed" name="task_completed"
+                    <input class=" p-2 my-2 border-2" type="text" id="task_completed" name="task_completed"
                         value="{{ task.completed }}" required>
-                    <input class="p-2 border-2" type="text" id="task_pomodoros" name="task_pomodoros"
+                    <input class="p-2 my-2 border-2" type="text" id="task_pomodoros" name="task_pomodoros"
                         value="{{ task.pomodoros }}" required>
                     <input type="hidden" id="id" name="id" value="{{task.id}}">
                     <input type="hidden" id="action" name="action" value="save_task">
                 </p>
                 <p>
-                    <button class="w-full my-2 px-4 py-2 bg-blue-400" type="submit">Save Task</button>
+                    <button
+                        class="rounded-md mt-2 bg-white text-gray-900 border-2 w-full border-zinc-800 p-2 focus:outline-none"
+                        type="submit">Save Task</button>
                 </p>
             </form>
         </div>
