--- a/templates/index.html
+++ b/templates/index.html
@@ -25,7 +25,7 @@
         </div>
 
         <br />
-        <!-- <p>{{ data | tojson }}</p> -->
+        <!-- <p class="text-center p-2 m-2">{{ data | tojson }}</p> -->
         <div class="task-list">
             <table>
                 <tr>
