created an edit catchall generic route for entities eg /edit/notes/xyz /edit/task/xyz

--- a/templates/edit_notes.html
+++ b/templates/edit_notes.html
@@ -44,7 +44,7 @@
                 <tr>
                     <td>{{ note.date.split('T')[0] }}</td>
                     <td>{{ note.text }}</td>
-                    <td><a href="/notes/{{ task.id }}">edit</a></td>
+                    <td><a href="/edit/notes/{{ note.id }}">edit</a></td>
                 </tr>
                 {% endfor %}
             </table>
