--- a/templates/base.html
+++ b/templates/base.html
@@ -6,6 +6,7 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <script src="https://cdn.tailwindcss.com"></script>
+    <script src="{{url_for('static', filename='htmx.min.js')}}"></script>
 </head>
 
 <body class="bg-neutral-900 text-neutral-100">
