Adding a local tailwindcss file

--- a/templates/base.html
+++ b/templates/base.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <script src="https://cdn.tailwindcss.com"></script>
+    <script src="{{url_for('static', filename='tailwindcss.min.js')}}"></script>
     <script src="{{url_for('static', filename='htmx.min.js')}}"></script>
 </head>
 
